--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,35 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@core/*": ["src/app/core/*"],
-      "@shared/*": ["src/app/shared/*"],
-      "@page/*": ["src/app/page/*"]
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@core/*": [
+        "src/app/core/*"
+      ],
+      "@shared/*": [
+        "src/app/shared/*"
+      ],
+      "@page/*": [
+        "src/app/page/*"
+      ],
+      "@spartan-ng/typography": [
+        "src/app/shared/components/ui/typography/index.ts"
+      ],
+      "@spartan-ng/ui-typography-helm": [
+        ".\\src/app/shared/components/ui-typography-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-button-helm": [
+        ".\\src/app/shared/components/ui-button-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-carousel-helm": [
+        ".\\src/app/shared/components/ui-carousel-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-icon-helm": [
+        ".\\src/app/shared/components/ui-icon-helm/src/index.ts"
+      ]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
