--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@spartan-ng/ui-core": "^0.0.1-alpha.380",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "embla-carousel-angular": "18.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^19.1.0",
     "@angular/cli": "^19.1.0",
     "@angular/compiler-cli": "^19.1.0",
+    "@ngx-env/builder": "^19.0.4",
     "@spartan-ng/cli": "^0.0.1-alpha.388",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
