--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       ],
       "@spartan-ng/ui-tabs-helm": [
         ".\\src/app/shared/components/ui/ui-tabs-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-hovercard-helm": [
+        ".\\src/app/shared/components/ui/ui-hovercard-helm/src/index.ts"
       ]
     },
     "outDir": "./dist/out-tsc",
