--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ yarn-error.log
 
 # env
 .env
+src/environments/environment.development.ts
+src/environments/environment.ts
 
 # Miscellaneous
 /.angular/cache
