--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,24 +3,12 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@app/*": [
-        "src/app/*"
-      ],
-      "@core/*": [
-        "src/app/core/*"
-      ],
-      "@shared/*": [
-        "src/app/shared/*"
-      ],
-      "@components/*": [
-        "src/app/shared/components/*"
-      ],
-      "@page/*": [
-        "src/app/page/*"
-      ],
-      "@environments/*": [
-        "src/environments/*"
-      ],
+      "@app/*": ["src/app/*"],
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@components/*": ["src/app/shared/components/*"],
+      "@page/*": ["src/app/page/*"],
+      "@environments/*": ["src/environments/*"],
       "@spartan-ng/typography": [
         "src/app/shared/components/ui/typography/index.ts"
       ],
@@ -40,16 +28,16 @@
         "src/app/shared/components/ui/ui-aspectratio-helm/src/index.ts"
       ],
       "@spartan-ng/ui-skeleton-helm": [
-        ".\\src/app/shared/components/ui/ui-skeleton-helm/src/index.ts"
+        "src/app/shared/components/ui/ui-skeleton-helm/src/index.ts"
       ],
       "@spartan-ng/ui-tabs-helm": [
-        ".\\src/app/shared/components/ui/ui-tabs-helm/src/index.ts"
+        "src/app/shared/components/ui/ui-tabs-helm/src/index.ts"
       ],
       "@spartan-ng/ui-hovercard-helm": [
-        ".\\src/app/shared/components/ui/ui-hovercard-helm/src/index.ts"
+        "src/app/shared/components/ui/ui-hovercard-helm/src/index.ts"
       ],
       "@spartan-ng/ui-scrollarea-helm": [
-        ".\\src/app/shared/components/ui/ui-scrollarea-helm/src/index.ts"
+        "src/app/shared/components/ui/ui-scrollarea-helm/src/index.ts"
       ]
     },
     "outDir": "./dist/out-tsc",
