--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
-    "build": "ng build",
+    "build": "node -r dotenv/config env.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:my-movie": "node dist/my-movie/server/server.mjs"
+    "serve:ssr:my-movie": "node dist/my-movie/server/server.mjs",
+    "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
