--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
     "build": "node -r dotenv/config env.js && ng build",
+    "build:ssr": "node -r dotenv/config env.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:my-movie": "node dist/my-movie/server/server.mjs",
