--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -1,20 +1,20 @@
 {
   "nodes": {
-    "my-movie": {
-      "name": "my-movie",
+    "ng-movie": {
+      "name": "ng-movie",
       "type": "app",
       "data": {
         "root": "",
         "projectType": "application",
         "sourceRoot": "src",
         "prefix": "app",
-        "name": "my-movie",
+        "name": "ng-movie",
         "generators": {},
         "targets": {
           "build": {
             "executor": "@angular-devkit/build-angular:application",
             "options": {
-              "outputPath": "dist/my-movie",
+              "outputPath": "dist/ng-movie",
               "index": "src/index.html",
               "browser": "src/main.ts",
               "polyfills": [
@@ -66,10 +66,10 @@
             "executor": "@angular-devkit/build-angular:dev-server",
             "configurations": {
               "production": {
-                "buildTarget": "my-movie:build:production"
+                "buildTarget": "ng-movie:build:production"
               },
               "development": {
-                "buildTarget": "my-movie:build:development"
+                "buildTarget": "ng-movie:build:development"
               }
             },
             "defaultConfiguration": "development",
@@ -11786,209 +11786,209 @@
     }
   },
   "dependencies": {
-    "my-movie": [
+    "ng-movie": [
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular-devkit/build-angular",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/cli",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/compiler-cli",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@spartan-ng/cli",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@types/express",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@types/jasmine",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@types/node",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:autoprefixer",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:jasmine-core",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:karma",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:karma-chrome-launcher",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:karma-coverage",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:karma-jasmine",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:karma-jasmine-html-reporter",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:postcss",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:tailwind-merge",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:tailwindcss",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:tailwindcss-animate",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:typescript",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/animations",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/cdk",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/common",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/compiler",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/core",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/forms",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/platform-browser",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/platform-browser-dynamic",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/platform-server",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/router",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@angular/ssr",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@ng-icons/core",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@ng-icons/lucide",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@spartan-ng/brain",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:@spartan-ng/ui-core",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:class-variance-authority",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:clsx",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:embla-carousel-angular",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:express",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:rxjs",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:tslib",
         "type": "static"
       },
       {
-        "source": "my-movie",
+        "source": "ng-movie",
         "target": "npm:zone.js",
         "type": "static"
       }
