--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,12 @@
       ],
       "@spartan-ng/ui-scrollarea-helm": [
         "src/app/shared/components/ui/ui-scrollarea-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-pagination-helm": [
+        "src/app/shared/components/ui/ui-pagination-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-select-helm": [
+        "src/app/shared/components/ui/ui-select-helm/src/index.ts"
       ]
     },
     "outDir": "./dist/out-tsc",
