--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       ],
       "@spartan-ng/ui-select-helm": [
         "src/app/shared/components/ui/ui-select-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-sheet-helm": [
+        "src/app/shared/components/ui/ui-sheet-helm/src/index.ts"
       ]
     },
     "outDir": "./dist/out-tsc",
