--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-TMDB_URL=""
+TMDB_URL="https://api.themoviedb.org/3/"
 API_KEY=""
-TMDB_IMAGE_URL=""
-TMDB_MEDIA_URL=""
-TMDB_VIDEO_THUMBNAIL_URL=""
-TMDB_VIDEO_URL=""
+TMDB_IMAGE_URL="https://image.tmdb.org/t/p/"
+TMDB_MEDIA_URL="https://image.tmdb.org/t/p/"
+TMDB_VIDEO_THUMBNAIL_URL="https://i.ytimg.com/vi/"
+TMDB_VIDEO_URL="https://www.youtube.com/watch?v="
