--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
+    "prebuild": "npm test",
     "build": "node -r dotenv/config env.js && ng build",
+    "prebuild:ssr": "npm test",
     "build:ssr": "node -r dotenv/config env.js && ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand",
+    "test:coverage": "jest --coverage --watchAll=false",
     "serve:ssr:ng-movie": "node dist/ng-movie/server/server.mjs",
-    "vercel-build": "npm run build:ssr"
+    "vercel-build": "npm run build:ssr",
+    "prevercel-build": "npm test"
   },
   "private": true,
   "dependencies": {
@@ -44,11 +50,16 @@
     "@angular/compiler-cli": "^19.1.0",
     "@ngx-env/builder": "^19.0.4",
     "@spartan-ng/cli": "^0.0.1-alpha.388",
+    "@testing-library/angular": "^17.4.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-preset-angular": "^15.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
