fix install and build, need add --legacy

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
     "api/index.js": {
       "includeFiles": "dist/ng-movie/**"
     }
+  },
+  "build": {
+    "command": "npm install --legacy-peer-deps && npm run vercel-build"
   }
 }
