--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test:ci": "jest --runInBand",
     "test:coverage": "jest --coverage --watchAll=false",
     "serve:ssr:ng-movie": "node dist/ng-movie/server/server.mjs",
+    "prevercel-build": "npm test",
     "vercel-build": "npm run build:ssr",
-    "prevercel-build": "npm test"
+    "clean": "npx rimraf node_modules dist"
   },
   "private": true,
   "dependencies": {
@@ -66,9 +67,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.1",
+    "rimraf": "^5.0.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.7.2"
+  },
+  "overrides": {
+    "rimraf": "^5.0.2"
   }
 }
