try to fix build in vercel#1

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve:ssr:ng-movie": "node dist/ng-movie/server/server.mjs",
     "prevercel-build": "npm test",
     "vercel-build": "npm run build:ssr",
+    "vercel-local": "npx vercel build",
     "clean": "npx rimraf node_modules dist"
   },
   "private": true,
