--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "scripts": {
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
-    "prebuild": "npm test",
     "build": "node -r dotenv/config env.js && ng build",
-    "prebuild:ssr": "npm test",
-    "build:ssr": "node -r dotenv/config env.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "test:coverage": "jest --coverage --watchAll=false",
     "serve:ssr:ng-movie": "node dist/ng-movie/server/server.mjs",
-    "prevercel-build": "npm test",
-    "vercel-build": "npm run build:ssr",
+    "vercel-build": "npm test && npm run build && npm run build:ssr",
     "vercel-local": "npx vercel build",
     "clean": "npx rimraf node_modules dist"
   },
