--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/ng-movie",
   "public": true,
   "name": "ng-movie",
   "rewrites": [
