--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
+    "prebuild": "npm test",
     "build": "node -r dotenv/config env.js && npm test && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
