--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "dev": "node -r dotenv/config env.js && ng serve",
-    "prebuild": "npm test",
-    "build": "node -r dotenv/config env.js && npm test && ng build",
+    "prebuild": "node -r dotenv/config env.js && npm test",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
